sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:8: error: value && is not a member of Unit
  while ((echange=true) && (i<x)){
                        ^